# kitinerary-workbench

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  add_license.sh
src/: CMakeLists.txt  attributemodel.cpp  attributemodel.h  consoleoutputwidget.cpp  consoleoutputwidget.h  consoleoutputwidget.ui  documentmodel.cpp  documentmodel.h  dommodel.cpp  dommodel.h  extractoreditorwidget.cpp  extractoreditorwidget.h  extractoreditorwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metaenumcombobox.cpp  metaenumcombobox.h  org.kde.kitinerary-workbench.appdata.xml  org.kde.kitinerary-workbench.desktop  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  standarditemmodelhelper.cpp  standarditemmodelhelper.h  ui.qrc  ui.rc  uic9183ticketlayoutmodel.cpp  uic9183ticketlayoutmodel.h  uic9183widget.cpp  uic9183widget.h  uic9183widget.ui
